# drone-transmitter

./: .gitignore  .gitmodules  CMakeLists.txt
.vscode.example/: c_cpp_properties.json  settings.json
components/joysticks/: CMakeLists.txt  joysticks.c
components/joysticks/include/: joysticks.h
components/switches/: CMakeLists.txt  switches.c
components/switches/include/: switches.h
main/: CMakeLists.txt  drone-transmitter.c  idf_component.yml  main.c
main/calibration/: calibration.c  calibration.h
main/config/: config.c  config.h
main/espnow/: espnow.c  espnow.h
main/setup/: setup.c  setup.h
main/tasks/: input_read_task.c  oled_update_task.c  receive_task.c  tasks_common.c  tasks_common.h  transmit_task.c
